--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>My Personal GitHub Webpage</title>
+        <title>Mosthi Skejpers</title>
         <link rel="stylesheet" type="text/css" href="css/style.css"/>
     </head>
     <body>
         <article>
-        <h1>&#128075; Hi! I'm [...]</h1>
+        <h1>&#128075; Hejsan Hoppsan</h1>
         <p>
             Welcome to my GitHub account. 
         </p>
